--- a/player/container.html
+++ b/player/container.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <body>
+        <style type="text/css">
+            video {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
 
-<style type="text/css">
-video {
-   width:100%;
-   max-width:600px;
-   height:auto;
-}
-</style>
-
-<video controls>
-  <source src="example.mp4" type="video/mp4">
-Your browser does not support video
-</video>
-
-</body>
+        <video controls>
+            <source src="example.mp4" type="video/mp4" />
+            Your browser does not support video
+        </video>
+    </body>
 </html>
