--- a/player/container.html
+++ b/player/container.html
@@ -8,7 +8,7 @@
             }
         </style>
 
-        <video controls autoplay>
+        <video controls poster="example.png">
             <source src="example.mp4" type="video/mp4" />
             Your browser does not support video
         </video>
