--- a/player/page.html
+++ b/player/page.html
@@ -11,14 +11,8 @@
         />
         <meta
             name="twitter:image"
-            content="https://cards-player-samples.vercel.app/player/example.png"
+            content="https://cards-player-samples.vercel.app/player/1.png"
         />
-        <meta
-            name="twitter:player"
-            content="https://cards-player-samples.vercel.app/player/container.html"
-        />
-        <meta name="twitter:player:width" content="480" />
-        <meta name="twitter:player:height" content="480" />
     </head>
 
     <body>
