--- a/player/page.html
+++ b/player/page.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-        <meta name="twitter:card" content="player" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@TwitterDev" />
         <meta name="twitter:title" content="Sample Player Card" />
         <meta
