--- a/player/page.html
+++ b/player/page.html
@@ -9,10 +9,12 @@
             name="twitter:description"
             content="This is a sample video. When you implement, make sure all links are secure."
         />
-        <meta
-            name="twitter:image"
-            content="https://cards-player-samples.vercel.app/player/1.png"
-        />
+        <script>
+            var q = location.search.substring(1);
+            document.write(`
+            <meta name="twitter:image" content="https://cards-player-samples.vercel.app/player/${q}.png" />
+            `);
+        </script>
     </head>
 
     <body>
